--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
             <h3>Cube-free Office</h3>
             <p>
               Everyone at our company is placed in private offices. Feel free
-              to retreat into silence while pouring over code, or grab your
+              to retreat into silence while poring over code, or grab your
               laptop and go collaborate with others.
             </p>
           </div>
