Added more support for mobile browsing

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en" > <!--<![endif]-->
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
     <title>Join the Engineering Team at Veracross</title>
 
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/foundation.css" />
+    <link rel="stylesheet" href="css/foundation.css?v=1.130" />
+    <link rel="stylesheet" media="all and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 1)"    href="css/phones.css?v=1.1"/>
     <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
     <script src="js/custom.modernizr.js"></script>
 
@@ -29,6 +30,10 @@
 
       <div id="logo-box" class="large-12">
         <img src="img/vc-logo.png" alt="Veracross Software, LLC" id="logo-text" />
+      </div>
+
+      <div id="logo-box-mobile" class="large-12">
+        <img src="img/vc-logo-mobile.png" alt="Veracross Software, LLC" id="logo-text" />
       </div>
 
       <header class="large-12 columns">
