Will is the contact person for engineering carrers, changed the email to reflect change

--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
               <li><span>Any open source, class, web or other software projects you can share</span></li>
               <li><span>A copy of your resume</span></li>
             </ol>
-            <p>Send to us via <a href="mailto:careers@veracross.com">careers@veracross.com</a> and we’ll follow up!</p>
+            <p>Send to Will via <a href="mailto:wbond@breuer.com">wbond@breuer.com</a> and we’ll follow up!</p>
 
           </div>
         </div>
