--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <div class="detail-sub">
             <div class="detail-box">
               <h3>Worldwide</h3>
-              <p>13 Countries</p>
+              <p>Over 20 Countries</p>
             </div>
             <div class="detail-box last">
               <h3>Multifaceted</h3>
@@ -134,7 +134,7 @@
           <div class="team-content">
             <h3>Jeff Fraser</h3>
             <p>
-              Jeff has been working at Veracross for five years and
+              Jeff has been working at Veracross for seven years and
               is one of the first engineering hires. He has a BS in Math
               from Gordon College and owns numerous core
               components of our system.
@@ -154,7 +154,7 @@
           <div class="team-content">
             <h3>Maria Street</h3>
             <p>
-              Maria joined the team last year following a strong
+              Maria joined the team three years ago following a strong
               internship with us. Her background is in computer science
               and her interests include quality assurance and data-driven
               systems.
