Update logos. Add job description link and revise copy.

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
           <div class="panel apply-box large-10 columns push-1">
             <h2>Apply Now!</h2>
 
-            <p>To apply, write a short email with:</p>
+            <p>Check out the <a href="http://assets.veracross.com/docs/vc_engineer_job_description.pdf" target="_blank">job description</a> to see if you qualify. Then, to apply, write a short email with:</p>
             <ol>
               <li><span>What excites you about working at Veracross</span></li>
               <li><span>Any open source, class, web or other software projects you can share</span></li>
