--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
               <li><span>Any open source, class, web or other software projects you can share</span></li>
               <li><span>A copy of your resume</span></li>
             </ol>
-            <p>Send to Jeff via <a href="mailto:jfraser@breuer.com">jfraser@breuer.com</a> and we’ll follow up!</p>
+            <p>Email us via <a href="mailto:careers@veracross.com">careers@veracross.com</a> and we’ll follow up!</p>
 
           </div>
         </div>
